develop: added base for CreateGameHandler
